--- a/GoalsTracker/frontend/src/App.css
+++ b/GoalsTracker/frontend/src/App.css
@@ -4,3 +4,53 @@
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
+.App{
+    background-color: aquamarine;
+    height: 100vh;
+    padding: 2rem 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container{
+    min-width: 500px;
+    max-width: 50%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 4rem;
+    gap: 1rem;
+    border-radius: 1rem;
+}
+.title{
+    font-size: 2rem;
+    font-weight: 600;
+}
+.form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.6rem;
+}
+.input{
+    width: 100%;
+    padding: 0.4rem 1rem;
+    outline: none;
+    border: 1px solid gray;
+}
+.btn{
+    background-color: blueviolet;
+    border-radius: 0.6rem;
+    color: white;
+    padding: 0.4rem 1rem;
+    border: none;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+.redirect{
+    color: blueviolet;
+    font-size: 1rem;
+}
