--- a/GoalsTracker/frontend/src/App.css
+++ b/GoalsTracker/frontend/src/App.css
@@ -13,6 +13,7 @@
     align-items: center;
 }
 
+/* Login & Register */
 .container{
     min-width: 500px;
     max-width: 50%;
@@ -53,4 +54,80 @@
 .redirect{
     color: blueviolet;
     font-size: 1rem;
+}
+
+/* Dashboard */
+.dashboard{
+    min-height: 100vh;
+    background-color: aquamarine;
+    display: flex;
+    flex-direction: column;
+    padding: 2rem 4rem;
+    gap: 2rem;
+}
+.details{
+    background-color: white;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 2rem 0;
+}
+.svg{
+    height: 28px;
+    width: 28px;
+}
+.detail{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+.goals-section{
+    display: flex;
+    gap: 2rem;
+    justify-content: space-between;
+}
+.new-goal{
+    width: 500px;
+    max-height: 150px;
+    padding: 2rem 4rem;
+    background-color: white;
+}
+.goals{
+    width: 800px;
+    background-color: white;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.goal{
+    border-radius: 0.6rem;
+    background-color: blueviolet;
+    padding: 1rem 2rem;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+}
+.text{
+    font-size: 1.2rem;
+    font-weight: 500;
+    border-left: 4px solid aqua;
+    padding: 0.4rem 2rem;
+}
+.edit-btn{
+    background-color: rgb(5, 255, 5);
+    padding: 0.4rem 2rem;
+    border: none;
+    font-size: 1rem;
+    font-weight: 600;
+}
+.del-btn{
+    background-color: red;
+    color: white;
+    padding: 0.4rem 2rem;
+    border: none;
+    font-size: 1rem;
+    font-weight: 600;
 }
