--- a/ShoppingList/frontend/src/components/Card/Card.module.css
+++ b/ShoppingList/frontend/src/components/Card/Card.module.css
@@ -15,3 +15,18 @@
     gap: 1rem;
     padding: 2rem 2rem;
 }
+.name{
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+.desc{
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+.price{
+    font-size: 1rem;
+}
+.location{
+    font-size: 1rem;
+    color: gray;
+}
