--- a/ShoppingList/frontend/src/components/Card/Card.module.css
+++ b/ShoppingList/frontend/src/components/Card/Card.module.css
@@ -1,5 +1,5 @@
 .card{
-    width: 20%;
+    width: 30%;
     display: flex;
     flex-direction: column;
     border: 2px solid lightgray;
@@ -29,4 +29,15 @@
 .location{
     font-size: 1rem;
     color: gray;
+}
+
+@media screen  and (max-width:540px){
+    .card{
+        width: 100%;
+    }
+}
+@media (min-width:540px)  and (max-width:900px){
+    .card{
+        width: 45%;
+    }
 }
