--- a/ShoppingList/frontend/src/components/Home/Home.module.css
+++ b/ShoppingList/frontend/src/components/Home/Home.module.css
@@ -1,12 +1,12 @@
 .container{
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
     gap: 2rem;
 }
 .navbar{
     display: flex;
     justify-content: space-between;
+    align-items: flex-end;
     padding: 1.5rem 4rem;
     border-bottom: 2px solid lightgray;
 }
@@ -32,10 +32,33 @@
     gap: 2rem;
 }
 .btn{
-    position: absolute;
+    position: fixed;
     bottom: 10px;
     right: 10px;
     background-color: #333;
     color: white;
     padding: 0.4rem 1rem;
+}
+
+@media screen and (max-width:540px) {
+    .navbar{
+        padding: 1rem 0.5rem;
+    }
+    .logo{
+        font-size: 1.8rem;
+    }
+    .cards{
+        padding: 2rem 1rem;
+    }
+}
+@media (min-width:540px) and (max-width:900px) {
+    .navbar{
+        padding: 1rem 0.5rem;
+    }
+    .logo{
+        font-size: 1.8rem;
+    }
+    .cards{
+        padding: 2rem 1rem;
+    }
 }
