--- a/ShoppingList/frontend/src/components/Modal/Modal.module.css
+++ b/ShoppingList/frontend/src/components/Modal/Modal.module.css
@@ -38,3 +38,13 @@
     padding: 0.4rem 2rem;
     cursor: pointer;
 }
+@media screen  and (max-width:540px){
+    .form{
+        padding: 2rem 2rem;
+    }
+}
+@media (min-width:540px)  and (max-width:900px){
+    .form{
+        padding: 2rem 2rem;
+    }
+}
