--- a/ShoppingList/frontend/src/components/Home/Home.module.css
+++ b/ShoppingList/frontend/src/components/Home/Home.module.css
@@ -23,6 +23,9 @@
     color: black;
     font-size: 1.2rem;
     font-weight: 600;
+    background: none;
+    border: none;
+    cursor: pointer;
 }
 .cards{
     display: flex;
@@ -38,6 +41,11 @@
     background-color: #333;
     color: white;
     padding: 0.4rem 1rem;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 500;
+    border: none;
+    border-radius: 1rem;
 }
 
 @media screen and (max-width:540px) {
